fix spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -56,7 +56,7 @@ ul.vertical > li:hover {
 }
 
 section section:not(:last-child) {
-    margin: 0 0 2rem;
+    margin: 0 0 1.5rem;
 }
 
 /* Spacing */
@@ -74,11 +74,11 @@ body {
     grid-template-rows: auto 1fr auto;
 }
 
-.header{
+.header {
     grid-area: header;
 }
 
-.header .row{
+.header .row {
     display: flex;
     justify-content: space-between;
 
@@ -172,7 +172,7 @@ h1 {
 h2 {
     font-size: 1.5rem;
     line-height: 1;
-    margin: 0 0 1.5rem;
+    margin: 0 0 1rem;
 }
 
 h3 {
@@ -360,6 +360,10 @@ article > blockquote {
     border-left: 3px solid black;
 }
 
+blockquote p {
+    margin: 1rem 0;
+}
+
 .article-info {
     color: rgba(0, 0, 0, 0.54);
     font-size: 1rem;
@@ -388,7 +392,7 @@ dl.vertical {
 
 dl.horizontal {
     flex-direction: row;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 dl.horizontal dd:not(:last-child) {
